fixed bug on mobile view

--- a/CSS/game.css
+++ b/CSS/game.css
@@ -80,3 +80,5 @@ h1 {
 #reset2:hover{
     color: white;
 }
+
+@media only screen and (max-width: 768px) {}
